--- a/post-1.html
+++ b/post-1.html
@@ -11,54 +11,57 @@
 <link rel="preload" href="css/Poppins-Regular.woff2" as="font" crossorigin>
 <style>html,body{-webkit-text-zoom:reset !important}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Bold.woff2') format('woff2'),url('css/Poppins-Bold.woff') format('woff');font-weight:700}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Regular.woff2') format('woff2'),url('css/Poppins-Regular.woff') format('woff');font-weight:400}body>div{font-size:0}p,span,h1,h2,h3,h4,h5,h6,a,li{margin:0;word-spacing:normal;word-wrap:break-word;-ms-word-wrap:break-word;pointer-events:auto;-ms-text-size-adjust:none !important;-moz-text-size-adjust:none !important;-webkit-text-size-adjust:none !important;text-size-adjust:none !important;max-height:10000000px}sup{font-size:inherit;vertical-align:baseline;position:relative;top:-0.4em}sub{font-size:inherit;vertical-align:baseline;position:relative;top:0.4em}ul{display:block;word-spacing:normal;word-wrap:break-word;list-style-type:none;padding:0;margin:0;-moz-padding-start:0;-khtml-padding-start:0;-webkit-padding-start:0;-o-padding-start:0;-padding-start:0;-webkit-margin-before:0;-webkit-margin-after:0}li{display:block;white-space:normal}li p{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none}form{display:inline-block}a{text-decoration:inherit;color:inherit;-webkit-tap-highlight-color:rgba(0,0,0,0)}textarea{resize:none}.shm-l{float:left;clear:left}.shm-r{float:right;clear:right}.btf{display:none}.plyr{min-width:0 !important}html{font-family:sans-serif}body{font-size:0;margin:0}audio,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0;outline:0}b,strong{font-weight:700}dfn{font-style:italic}h1,h2,h3,h4,h5,h6{font-size:1em;line-height:1;margin:0}img{border:0}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=submit]{-webkit-appearance:button;cursor:pointer;box-sizing:border-box;white-space:normal}input[type=text],input[type=password],input[type=email],input[type=date],input[type=number],textarea{-webkit-appearance:none;appearance:none;box-sizing:border-box}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;box-sizing:border-box;border-color:#ddd}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}blockquote{margin-block-start:0;margin-block-end:0;margin-inline-start:0;margin-inline-end:0}:-webkit-full-screen-ancestor:not(iframe){-webkit-clip-path:initial!important}
 html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu-content{cursor:pointer;position:relative}li{-webkit-tap-highlight-color:rgba(0,0,0,0)}
-#b{background-color:#fff}.v20{display:inline-block;vertical-align:top}.ps53{position:relative;margin-top:0}.s69{width:100%;min-width:960px;min-height:73px}.c86{z-index:1;pointer-events:none}.c87{z-index:2;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#f4f4f4;background-clip:padding-box}.ps54{position:relative;margin-top:8px}.v21{display:block;vertical-align:top}.s70{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:58px}.v22{display:inline-block;vertical-align:top;overflow:visible}.ps55{position:relative;margin-left:10px;margin-top:0}.s71{min-width:473px;width:473px;min-height:58px;height:58px}.c88{z-index:3;pointer-events:auto}.ps56{position:relative;margin-left:0;margin-top:0}.m6{padding:0px 0px 0px 0px}.ml6{outline:0}.s72{min-width:236px;width:236px;min-height:58px;height:58px}.mcv6{display:inline-block}.s73{min-width:236px;width:236px;min-height:58px}.c89{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps57{position:relative;margin-left:0;margin-top:1px}.s74{min-width:236px;width:236px;min-height:55px}.c90{pointer-events:auto;overflow:hidden;height:55px}.p11{text-indent:0;padding-bottom:0;padding-right:0;text-align:center}.f22{font-family:Poppins;font-size:27px;font-size:calc(27px * var(--f));line-height:1.816;font-weight:700;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps58{position:relative;margin-left:1px;margin-top:0}.c91{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps59{position:relative;margin-top:12px}.s75{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:276px}.s76{min-width:940px;width:940px;min-height:47px}.s77{min-width:720px;width:720px;min-height:47px}.c93{z-index:4;pointer-events:auto;overflow:hidden;height:47px}.p12{text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f23{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps60{position:relative;margin-left:116px;margin-top:0}.s78{min-width:104px;width:104px;min-height:41px}.c94{z-index:5;pointer-events:auto;overflow:hidden;height:41px}.f24{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.s79{min-width:940px;width:940px;min-height:229px}.s80{min-width:220px;width:220px;min-height:229px;height:229px}.c95{pointer-events:auto}.i11{position:absolute;left:0;width:220px;height:229px;top:0}.i12{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps61{position:relative;margin-left:20px;margin-top:0}.s81{min-width:700px;width:700px;min-height:229px}.c96{pointer-events:auto;overflow:hidden;height:229px}.f25{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:2.279;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.c97{display:inline-block;position:relative;margin-left:0;margin-top:0}@media (prefers-color-scheme: dark) {#b{background-color:#000}.c87{background-color:#14222a}.f22{color:#fffefe}.f23{color:#fffefe}.f24{color:#fffefe}.f25{color:#fffefe}}</style>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.3b76e6.css" media="print">
+#b{background-color:#fff}.v23{display:inline-block;vertical-align:top}.ps63{position:relative;margin-top:0}.s79{width:100%;min-width:960px;min-height:73px}.c101{z-index:1;pointer-events:none}.c102{z-index:2;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#f4f4f4;background-clip:padding-box}.ps64{position:relative;margin-top:8px}.v24{display:block;vertical-align:top}.s80{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:58px}.v25{display:inline-block;vertical-align:top;overflow:visible}.ps65{position:relative;margin-left:10px;margin-top:0}.s81{min-width:710px;width:710px;min-height:58px;height:58px}.c103{z-index:3;pointer-events:auto}.ps66{position:relative;margin-left:0;margin-top:0}.m7{padding:0px 0px 0px 0px}.ml7{outline:0}.s82{min-width:236px;width:236px;min-height:58px;height:58px}.mcv7{display:inline-block}.s83{min-width:236px;width:236px;min-height:58px}.c104{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps67{position:relative;margin-left:0;margin-top:1px}.s84{min-width:236px;width:236px;min-height:55px}.c105{pointer-events:auto;overflow:hidden;height:55px}.p14{text-indent:0;padding-bottom:0;padding-right:0;text-align:center}.f25{font-family:Poppins;font-size:27px;font-size:calc(27px * var(--f));line-height:1.816;font-weight:700;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps68{position:relative;margin-left:1px;margin-top:0}.c106{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.c107{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps69{position:relative;margin-top:12px}.s85{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:276px}.s86{min-width:940px;width:940px;min-height:47px}.s87{min-width:720px;width:720px;min-height:47px}.c109{z-index:4;pointer-events:auto;overflow:hidden;height:47px}.p15{text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f26{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps70{position:relative;margin-left:116px;margin-top:0}.s88{min-width:104px;width:104px;min-height:41px}.c110{z-index:5;pointer-events:auto;overflow:hidden;height:41px}.f27{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.s89{min-width:940px;width:940px;min-height:229px}.s90{min-width:220px;width:220px;min-height:229px;height:229px}.c111{pointer-events:auto}.i11{position:absolute;left:0;width:220px;height:229px;top:0}.i12{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps71{position:relative;margin-left:20px;margin-top:0}.s91{min-width:700px;width:700px;min-height:229px}.c112{pointer-events:auto;overflow:hidden;height:229px}.f28{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:2.279;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.c113{display:inline-block;position:relative;margin-left:0;margin-top:0}@media (prefers-color-scheme: dark) {#b{background-color:#000}.c102{background-color:#14222a}.f25{color:#fffefe}.f26{color:#fffefe}.f27{color:#fffefe}.f28{color:#fffefe}}</style>
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.787d0a.css" media="print">
 </head>
 <body id="b">
-<div class="v20 ps53 s69 c86">
-<div class="v20 ps53 s69 c87">
-<div class="ps54 v21 s70">
-<div class="v22 ps55 s71 c88">
-<ul class="menu-dropdown v20 ps56 s71 m6" id="m1">
-<li class="v20 ps56 s72 mit6">
-<a href="./" class="ml6"><div class="menu-content mcv6"><div class="v20 ps56 s73 c89"><div class="v20 ps57 s74 c90"><p class="p11 f22">Home</p></div></div></div></a>
+<div class="v23 ps63 s79 c101">
+<div class="v23 ps63 s79 c102">
+<div class="ps64 v24 s80">
+<div class="v25 ps65 s81 c103">
+<ul class="menu-dropdown v23 ps66 s81 m7" id="m1">
+<li class="v23 ps66 s82 mit7">
+<a href="./" class="ml7"><div class="menu-content mcv7"><div class="v23 ps66 s83 c104"><div class="v23 ps67 s84 c105"><p class="p14 f25">Home</p></div></div></div></a>
 </li>
-<li class="v20 ps58 s72 mit6">
-<a href="blog-index.php" class="ml6"><div class="menu-content mcv6"><div class="v20 ps56 s73 c91"><div class="v20 ps57 s74 c90"><p class="p11 f22">Blog</p></div></div></div></a>
+<li class="v23 ps68 s82 mit7">
+<a href="page-1.html" class="ml7"><div class="menu-content mcv7"><div class="v23 ps66 s83 c106"><div class="v23 ps67 s84 c105"><p class="p14 f25">Page 1</p></div></div></div></a>
+</li>
+<li class="v23 ps68 s82 mit7">
+<a href="blog-index.php" class="ml7"><div class="menu-content mcv7"><div class="v23 ps66 s83 c107"><div class="v23 ps67 s84 c105"><p class="p14 f25">Blog</p></div></div></div></a>
 </li>
 </ul>
 </div>
 </div>
 </div>
 </div>
-<div class="ps59 v21 s75">
-<div class="v20 ps55 s76 c92">
-<div class="v20 ps56 s77 c93">
-<h1 class="p12"><span class="f23"><a href="#">Post 1</a></span></h1>
+<div class="ps69 v24 s85">
+<div class="v23 ps65 s86 c108">
+<div class="v23 ps66 s87 c109">
+<h1 class="p15"><span class="f26"><a href="#">Post 1</a></span></h1>
 </div>
-<div class="v20 ps60 s78 c94">
-<h2 class="p12 f24">03/10/2022</h2>
+<div class="v23 ps70 s88 c110">
+<h2 class="p15 f27">03/10/2022</h2>
 </div>
 </div>
-<div class="v20 ps55 s79 c92">
-<div class="v20 ps56 s80 c95">
+<div class="v23 ps65 s89 c108">
+<div class="v23 ps66 s90 c111">
 <picture class="i12">
 <source srcset="images/placeholder-220.webp 1x, images/placeholder-440.webp 2x" type="image/webp">
 <source srcset="images/placeholder-220.png 1x, images/placeholder-440.png 2x">
 <img src="images/placeholder-440.png" class="un12 i11">
 </picture>
 </div>
-<div class="v20 ps61 s81 c96">
-<p class="p12 f25">Hello,</p>
-<p class="p12 f25">this is a new blog post (no. 1).</p>
+<div class="v23 ps71 s91 c112">
+<p class="p15 f28">Hello,</p>
+<p class="p15 f28">this is a new blog post (no. 1).</p>
 </div>
 </div>
 </div>
-<div class="c97">
+<div class="c113">
 </div>
 <script>var p=document.createElement("P");p.innerHTML="&nbsp;",p.style.cssText="position:fixed;visible:hidden;font-size:100px;zoom:1",document.body.appendChild(p);var rsz=function(e){return function(){var r=Math.trunc(1e3/parseFloat(window.getComputedStyle(e).getPropertyValue("font-size")))/10,t=document.body;r!=t.style.getPropertyValue("--f")&&t.style.setProperty("--f",r)}}(p);if("ResizeObserver"in window){var ro=new ResizeObserver(rsz);ro.observe(p)}else if("requestAnimationFrame"in window){var raf=function(){rsz(),requestAnimationFrame(raf)};requestAnimationFrame(raf)}else setInterval(rsz,100);</script>
 
-<script>dpth="/";!function(){for(var e=["js/jquery.230098.js","js/jqueryui.230098.js","js/menu.230098.js","js/menu-dropdown-animations.230098.js","js/menu-dropdown.3b76e6.js","js/post-1.3b76e6.js"],n={},s=-1,t=function(t){var o=new XMLHttpRequest;o.open("GET",e[t],!0),o.onload=function(){for(n[t]=o.responseText;s<6&&void 0!==n[s+1];){s++;var e=document.createElement("script");e.textContent=n[s],document.body.appendChild(e)}},o.send()},o=0;o<6;o++)t(o)}();
+<script>dpth="/";!function(){for(var e=["js/jquery.230098.js","js/jqueryui.230098.js","js/menu.230098.js","js/menu-dropdown-animations.230098.js","js/menu-dropdown.787d0a.js","js/post-1.787d0a.js"],n={},s=-1,t=function(t){var o=new XMLHttpRequest;o.open("GET",e[t],!0),o.onload=function(){for(n[t]=o.responseText;s<6&&void 0!==n[s+1];){s++;var e=document.createElement("script");e.textContent=n[s],document.body.appendChild(e)}},o.send()},o=0;o<6;o++)t(o)}();
 </script>
 </body>
 </html>
