--- a/post-4.html
+++ b/post-4.html
@@ -11,57 +11,60 @@
 <link rel="preload" href="css/Poppins-Regular.woff2" as="font" crossorigin>
 <style>html,body{-webkit-text-zoom:reset !important}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Bold.woff2') format('woff2'),url('css/Poppins-Bold.woff') format('woff');font-weight:700}@font-face{font-display:block;font-family:"Poppins";src:url('css/Poppins-Regular.woff2') format('woff2'),url('css/Poppins-Regular.woff') format('woff');font-weight:400}body>div{font-size:0}p,span,h1,h2,h3,h4,h5,h6,a,li{margin:0;word-spacing:normal;word-wrap:break-word;-ms-word-wrap:break-word;pointer-events:auto;-ms-text-size-adjust:none !important;-moz-text-size-adjust:none !important;-webkit-text-size-adjust:none !important;text-size-adjust:none !important;max-height:10000000px}sup{font-size:inherit;vertical-align:baseline;position:relative;top:-0.4em}sub{font-size:inherit;vertical-align:baseline;position:relative;top:0.4em}ul{display:block;word-spacing:normal;word-wrap:break-word;list-style-type:none;padding:0;margin:0;-moz-padding-start:0;-khtml-padding-start:0;-webkit-padding-start:0;-o-padding-start:0;-padding-start:0;-webkit-margin-before:0;-webkit-margin-after:0}li{display:block;white-space:normal}li p{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none}form{display:inline-block}a{text-decoration:inherit;color:inherit;-webkit-tap-highlight-color:rgba(0,0,0,0)}textarea{resize:none}.shm-l{float:left;clear:left}.shm-r{float:right;clear:right}.btf{display:none}.plyr{min-width:0 !important}html{font-family:sans-serif}body{font-size:0;margin:0}audio,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0;outline:0}b,strong{font-weight:700}dfn{font-style:italic}h1,h2,h3,h4,h5,h6{font-size:1em;line-height:1;margin:0}img{border:0}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=submit]{-webkit-appearance:button;cursor:pointer;box-sizing:border-box;white-space:normal}input[type=text],input[type=password],input[type=email],input[type=date],input[type=number],textarea{-webkit-appearance:none;appearance:none;box-sizing:border-box}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;box-sizing:border-box;border-color:#ddd}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}blockquote{margin-block-start:0;margin-block-end:0;margin-inline-start:0;margin-inline-end:0}:-webkit-full-screen-ancestor:not(iframe){-webkit-clip-path:initial!important}
 html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu-content{cursor:pointer;position:relative}li{-webkit-tap-highlight-color:rgba(0,0,0,0)}
-#b{background-color:#fff}.v11{display:inline-block;vertical-align:top}.ps26{position:relative;margin-top:0}.s30{width:100%;min-width:960px;min-height:73px}.c50{z-index:1;pointer-events:none}.c51{z-index:2;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#f4f4f4;background-clip:padding-box}.ps27{position:relative;margin-top:8px}.v12{display:block;vertical-align:top}.s31{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:58px}.v13{display:inline-block;vertical-align:top;overflow:visible}.ps28{position:relative;margin-left:10px;margin-top:0}.s32{min-width:473px;width:473px;min-height:58px;height:58px}.c52{z-index:3;pointer-events:auto}.ps29{position:relative;margin-left:0;margin-top:0}.m3{padding:0px 0px 0px 0px}.ml3{outline:0}.s33{min-width:236px;width:236px;min-height:58px;height:58px}.mcv3{display:inline-block}.s34{min-width:236px;width:236px;min-height:58px}.c53{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps30{position:relative;margin-left:0;margin-top:1px}.s35{min-width:236px;width:236px;min-height:55px}.c54{pointer-events:auto;overflow:hidden;height:55px}.p5{text-indent:0;padding-bottom:0;padding-right:0;text-align:center}.f10{font-family:Poppins;font-size:27px;font-size:calc(27px * var(--f));line-height:1.816;font-weight:700;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps31{position:relative;margin-left:1px;margin-top:0}.c55{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps32{position:relative;margin-top:12px}.s36{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:276px}.s37{min-width:940px;width:940px;min-height:47px}.s38{min-width:720px;width:720px;min-height:47px}.c57{z-index:4;pointer-events:auto;overflow:hidden;height:47px}.p6{text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f11{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps33{position:relative;margin-left:116px;margin-top:0}.s39{min-width:104px;width:104px;min-height:41px}.c58{z-index:5;pointer-events:auto;overflow:hidden;height:41px}.f12{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.s40{min-width:940px;width:940px;min-height:229px}.s41{min-width:220px;width:220px;min-height:229px;height:229px}.c59{pointer-events:auto}.i5{position:absolute;left:0;width:220px;height:229px;top:0}.i6{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps34{position:relative;margin-left:20px;margin-top:0}.s42{min-width:700px;width:700px;min-height:229px}.c60{pointer-events:auto;overflow:hidden;height:229px}.f13{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:2.279;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.c61{display:inline-block;position:relative;margin-left:0;margin-top:0}@media (prefers-color-scheme: dark) {#b{background-color:#000}.c51{background-color:#14222a}.f10{color:#fffefe}.f11{color:#fffefe}.f12{color:#fffefe}.f13{color:#fffefe}}</style>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.3b76e6.css" media="print">
+#b{background-color:#fff}.v14{display:inline-block;vertical-align:top}.ps36{position:relative;margin-top:0}.s40{width:100%;min-width:960px;min-height:73px}.c62{z-index:1;pointer-events:none}.c63{z-index:2;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#f4f4f4;background-clip:padding-box}.ps37{position:relative;margin-top:8px}.v15{display:block;vertical-align:top}.s41{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:58px}.v16{display:inline-block;vertical-align:top;overflow:visible}.ps38{position:relative;margin-left:10px;margin-top:0}.s42{min-width:710px;width:710px;min-height:58px;height:58px}.c64{z-index:3;pointer-events:auto}.ps39{position:relative;margin-left:0;margin-top:0}.m4{padding:0px 0px 0px 0px}.ml4{outline:0}.s43{min-width:236px;width:236px;min-height:58px;height:58px}.mcv4{display:inline-block}.s44{min-width:236px;width:236px;min-height:58px}.c65{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps40{position:relative;margin-left:0;margin-top:1px}.s45{min-width:236px;width:236px;min-height:55px}.c66{pointer-events:auto;overflow:hidden;height:55px}.p8{text-indent:0;padding-bottom:0;padding-right:0;text-align:center}.f13{font-family:Poppins;font-size:27px;font-size:calc(27px * var(--f));line-height:1.816;font-weight:700;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps41{position:relative;margin-left:1px;margin-top:0}.c67{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.c68{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:transparent;background-clip:padding-box}.ps42{position:relative;margin-top:12px}.s46{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:276px}.s47{min-width:940px;width:940px;min-height:47px}.s48{min-width:720px;width:720px;min-height:47px}.c70{z-index:4;pointer-events:auto;overflow:hidden;height:47px}.p9{text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f14{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.ps43{position:relative;margin-left:116px;margin-top:0}.s49{min-width:104px;width:104px;min-height:41px}.c71{z-index:5;pointer-events:auto;overflow:hidden;height:41px}.f15{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:1.779;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.s50{min-width:940px;width:940px;min-height:229px}.s51{min-width:220px;width:220px;min-height:229px;height:229px}.c72{pointer-events:auto}.i5{position:absolute;left:0;width:220px;height:229px;top:0}.i6{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps44{position:relative;margin-left:20px;margin-top:0}.s52{min-width:700px;width:700px;min-height:229px}.c73{pointer-events:auto;overflow:hidden;height:229px}.f16{font-family:Poppins;font-size:18px;font-size:calc(18px * var(--f));line-height:2.279;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;letter-spacing:normal;color:#000;background-color:initial;text-shadow:none}.c74{display:inline-block;position:relative;margin-left:0;margin-top:0}@media (prefers-color-scheme: dark) {#b{background-color:#000}.c63{background-color:#14222a}.f13{color:#fffefe}.f14{color:#fffefe}.f15{color:#fffefe}.f16{color:#fffefe}}</style>
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.787d0a.css" media="print">
 </head>
 <body id="b">
-<div class="v11 ps26 s30 c50">
-<div class="v11 ps26 s30 c51">
-<div class="ps27 v12 s31">
-<div class="v13 ps28 s32 c52">
-<ul class="menu-dropdown v11 ps29 s32 m3" id="m1">
-<li class="v11 ps29 s33 mit3">
-<a href="./" class="ml3"><div class="menu-content mcv3"><div class="v11 ps29 s34 c53"><div class="v11 ps30 s35 c54"><p class="p5 f10">Home</p></div></div></div></a>
+<div class="v14 ps36 s40 c62">
+<div class="v14 ps36 s40 c63">
+<div class="ps37 v15 s41">
+<div class="v16 ps38 s42 c64">
+<ul class="menu-dropdown v14 ps39 s42 m4" id="m1">
+<li class="v14 ps39 s43 mit4">
+<a href="./" class="ml4"><div class="menu-content mcv4"><div class="v14 ps39 s44 c65"><div class="v14 ps40 s45 c66"><p class="p8 f13">Home</p></div></div></div></a>
 </li>
-<li class="v11 ps31 s33 mit3">
-<a href="blog-index.php" class="ml3"><div class="menu-content mcv3"><div class="v11 ps29 s34 c55"><div class="v11 ps30 s35 c54"><p class="p5 f10">Blog</p></div></div></div></a>
+<li class="v14 ps41 s43 mit4">
+<a href="page-1.html" class="ml4"><div class="menu-content mcv4"><div class="v14 ps39 s44 c67"><div class="v14 ps40 s45 c66"><p class="p8 f13">Page 1</p></div></div></div></a>
+</li>
+<li class="v14 ps41 s43 mit4">
+<a href="blog-index.php" class="ml4"><div class="menu-content mcv4"><div class="v14 ps39 s44 c68"><div class="v14 ps40 s45 c66"><p class="p8 f13">Blog</p></div></div></div></a>
 </li>
 </ul>
 </div>
 </div>
 </div>
 </div>
-<div class="ps32 v12 s36">
-<div class="v11 ps28 s37 c56">
-<div class="v11 ps29 s38 c57">
-<h1 class="p6"><span class="f11"><a href="#">Post 4</a></span></h1>
+<div class="ps42 v15 s46">
+<div class="v14 ps38 s47 c69">
+<div class="v14 ps39 s48 c70">
+<h1 class="p9"><span class="f14"><a href="#">Post 4</a></span></h1>
 </div>
-<div class="v11 ps33 s39 c58">
-<h2 class="p6 f12">03/10/2022</h2>
+<div class="v14 ps43 s49 c71">
+<h2 class="p9 f15">03/10/2022</h2>
 </div>
 </div>
-<div class="v11 ps28 s40 c56">
-<div class="v11 ps29 s41 c59">
+<div class="v14 ps38 s50 c69">
+<div class="v14 ps39 s51 c72">
 <picture class="i6">
 <source srcset="images/placeholder-220.webp 1x, images/placeholder-440.webp 2x" type="image/webp">
 <source srcset="images/placeholder-220.png 1x, images/placeholder-440.png 2x">
 <img src="images/placeholder-440.png" class="un9 i5">
 </picture>
 </div>
-<div class="v11 ps34 s42 c60">
-<p class="p6 f13">Hello,</p>
-<p class="p6 f13">this is a new blog post (no. 2).</p>
-<p class="p6 f13"><br></p>
-<p class="p6 f13"><br></p>
-<p class="p6 f13">tralala</p>
+<div class="v14 ps44 s52 c73">
+<p class="p9 f16">Hello,</p>
+<p class="p9 f16">this is a new blog post (no. 2).</p>
+<p class="p9 f16"><br></p>
+<p class="p9 f16"><br></p>
+<p class="p9 f16">tralala</p>
 </div>
 </div>
 </div>
-<div class="c61">
+<div class="c74">
 </div>
 <script>var p=document.createElement("P");p.innerHTML="&nbsp;",p.style.cssText="position:fixed;visible:hidden;font-size:100px;zoom:1",document.body.appendChild(p);var rsz=function(e){return function(){var r=Math.trunc(1e3/parseFloat(window.getComputedStyle(e).getPropertyValue("font-size")))/10,t=document.body;r!=t.style.getPropertyValue("--f")&&t.style.setProperty("--f",r)}}(p);if("ResizeObserver"in window){var ro=new ResizeObserver(rsz);ro.observe(p)}else if("requestAnimationFrame"in window){var raf=function(){rsz(),requestAnimationFrame(raf)};requestAnimationFrame(raf)}else setInterval(rsz,100);</script>
 
-<script>dpth="/";!function(){for(var e=["js/jquery.230098.js","js/jqueryui.230098.js","js/menu.230098.js","js/menu-dropdown-animations.230098.js","js/menu-dropdown.3b76e6.js","js/post-4.3b76e6.js"],n={},s=-1,t=function(t){var o=new XMLHttpRequest;o.open("GET",e[t],!0),o.onload=function(){for(n[t]=o.responseText;s<6&&void 0!==n[s+1];){s++;var e=document.createElement("script");e.textContent=n[s],document.body.appendChild(e)}},o.send()},o=0;o<6;o++)t(o)}();
+<script>dpth="/";!function(){for(var e=["js/jquery.230098.js","js/jqueryui.230098.js","js/menu.230098.js","js/menu-dropdown-animations.230098.js","js/menu-dropdown.787d0a.js","js/post-4.787d0a.js"],n={},s=-1,t=function(t){var o=new XMLHttpRequest;o.open("GET",e[t],!0),o.onload=function(){for(n[t]=o.responseText;s<6&&void 0!==n[s+1];){s++;var e=document.createElement("script");e.textContent=n[s],document.body.appendChild(e)}},o.send()},o=0;o<6;o++)t(o)}();
 </script>
 </body>
 </html>
